--- a/templates/index.html
+++ b/templates/index.html
@@ -1,33 +1,72 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html lang="en" dir="ltr">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
-    <title>Tornado Chat Demo</title>
-    <link rel="stylesheet" href="{{ static_url("chat.css") }}" type="text/css"/>
+    <title>H2O IQ Manual Watering</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+    <!-- Google Charts -->
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script type="text/javascript" src="../static/tomato_chart.js"></script>
+    
+    <style type="text/css">
+      @import "../static/manual_form.css";
+      @import "../static/chart.css";
+      @import "../static/H2O_IQ.css";
+    </style>
   </head>
   <body>
-    <div id="body">
-      <div id="inbox">
-        {% for message in messages %}
-          {% include "message.html" %}
-        {% end %}
-      </div>
-      <div id="input">
-        <form action="/a/message/new" method="post" id="messageform">
-          <table>
-            <tr>
-              <td><input name="body" id="message" style="width:500px"/></td>
-              <td style="padding-left:5px">
-                <input type="submit" value="{{ _("Post") }}"/>
-                <input type="hidden" name="next" value="{{ request.path }}"/>
-                {{ xsrf_form_html() }}
-              </td>
-            </tr>
-          </table>
-        </form>
-      </div>
-    </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js" type="text/javascript"></script>
-    <script src="{{ static_url("chat.js") }}" type="text/javascript"></script>
+  <div id="hd">
+    <h1 class="g-section">H20 IQ - Manual Watering</h1>
+  </div>
+  <div id="bd">
+    <div id="tomato_chart_div" class="chart"></div>
+    <div id="wd-form" class="wd-form">
+      <form action="form-markup-error.html" method="post">
+        <fieldset>
+          <legend>Set a one-time watering</legend>
+          <p class="intro">
+            I'd like to water these today until the moisture level
+         </p>
+          <dl>
+            <dt>
+              <label for="manual_percent_moisture">reaches</label>
+            </dt>
+            <dd>
+              <select name="manual_percent_moisture" id="manual_percent_moisture">
+                <option value="-1">percent</option>
+                <option value="1">10%</option>
+                <option value="2">20%</option>
+                <option value="3">30%</option>
+                <option value="4">40%</option>
+                <option value="5">50%</option>
+                <option value="6">60%</option>
+                <option value="7">70%</option>
+                <option value="8">80%</option>
+                <option value="9">90%</option>
+                <option value="10">100%</option>
+              </select>
+            </dd>
+          </dl>
+          <p class="submit">
+            <input type="submit" value="Water now!"  tabindex="8">
+          </p>
+       </fieldset>
+      </form>
+   </div>
+   <div id="wd-form-toggle" class="wd-form">
+    <form action="form-markup-error.html" method="post">
+      <fieldset>
+        <legend>Automatic watering is off.</legend>
+        <p class="submit">
+          <input type="submit" value="Turn it on!"  tabindex="8">
+        </p>
+      </fieldset>
+    </form>
+  </div>
+  </div>
+  <script type="text/javascript" src="../static/manual_form.js"></script>
+  
   </body>
 </html>
+
