--- a/templates/auto_water.html
+++ b/templates/auto_water.html
@@ -6,6 +6,7 @@
 
     <!-- Google Charts -->
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script type="text/javascript" src="../static/tomato_chart.js"></script>
     
     <style type="text/css">
@@ -21,7 +22,7 @@
   <div id="bd">
     <div id="tomato_chart_div" class="chart"></div>
     <div id="wd-form" class="wd-form">
-      <form action="form-markup-error.html" method="post">
+      <form action="form-markup-error.html" method="post" id="waterform">
       <fieldset>
         <legend>Set up a recurring watering plan</legend>
         <p class="intro">
@@ -71,8 +72,8 @@
       </fieldset>
     </form>
    </div>
-   <div id="wd-form-toggle" class="wd-form">
-    <form action="form-markup-error.html" method="post">
+   <div id="wd-form-toggle-auto" class="wd-form">
+    <form action="form-markup-error.html" method="post" id="toggleform-auto">
       <fieldset>
         <legend>Automatic watering is on.</legend>
         <p class="submit">
